infrastructure/03-apps/linkwarden/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkwarden
  namespace: linkwarden
spec:
  selector:
    app: linkwarden
  ports:
    - port: 80
      targetPort: 3000
