infrastructure/03-apps/linkwarden/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karakeep-ingress
  namespace: karakeep
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: karakeep-public-chain@kubernetescrd
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
    - hosts: [link.foobarbaz.fr]
      secretName: karakeep-tls
  rules:
    - host: link.foobarbaz.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: karakeep
                port:
                  number: 80
