infrastructure/03-apps/linkwarden/manifests/policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: linkwarden-policy
  namespace: linkwarden
spec:
  endpointSelector:
    matchLabels:
      app: linkwarden
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": traefik
            "k8s:app.kubernetes.io/name": traefik
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": alloy
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": linkwarden
            "app": linkwarden-postgres
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": linkwarden
            "app": linkwarden-meilisearch
      toPorts:
        - ports:
            - port: "7700"
              protocol: TCP
    - toEntities:
        - world
        - cluster
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: linkwarden-postgres-policy
  namespace: linkwarden
spec:
  endpointSelector:
    matchLabels:
      app: linkwarden-postgres
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": linkwarden
            "app": linkwarden
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": alloy
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: linkwarden-meilisearch-policy
  namespace: linkwarden
spec:
  endpointSelector:
    matchLabels:
      app: linkwarden-meilisearch
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": linkwarden
            "app": linkwarden
      toPorts:
        - ports:
            - port: "7700"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": alloy
